# jbig2-rust

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  SECURITY.md  deny.toml
crates/image-bilevel/: Cargo.toml  README.md
crates/image-bilevel/src/: lib.rs
crates/jbig2/: Cargo.toml  LICENSE-MIT  README.md
crates/jbig2-workbench/: Cargo.toml  benchmark-corpus
crates/jbig2-workbench/conformance-test/: encode.just  mod.just
crates/jbig2-workbench/examples/: dump_segments.rs
crates/jbig2-workbench/src/: lib.rs
crates/jbig2-workbench/src/util/: mod.rs
crates/jbig2-workbench/tests/: conformance.rs  hooks.rs  jbig2dec_output_compat.rs  validator_corpus_regression.rs
crates/jbig2-workbench/tests/common/: mod.rs  oracles.rs
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/: INDEX.md
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-6_2_5_3-001-ImmediateLosslessGenericRegion/byte-0540-bit-4/: stream.jb2
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-EndOfFile/byte-0838-bit-0/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-EndOfFile/byte-0838-bit-2/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-EndOfPage/byte-0293-bit-3/: meta.toml  stream.jb2
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-EndOfPage/byte-0293-bit-4/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-ImmediateLosslessGenericRegion/byte-0088-bit-1/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-ImmediateLosslessGenericRegion/byte-0120-bit-2/: stream.jb2
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-ImmediateLosslessGenericRegion/byte-0120-bit-3/: stream.jb2
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-ImmediateLosslessHalftoneRegion/byte-0234-bit-0/: meta.toml  stream.jb2
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-ImmediateLosslessHalftoneRegion/byte-0234-bit-2/: expected.toml  stream.jb2
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-ImmediateLosslessTextRegion/byte-0078-bit-0/: stream.jb2
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-ImmediateLosslessTextRegion/byte-0078-bit-1/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-ImmediateLosslessTextRegion/byte-0078-bit-2/: stream.jb2
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-PageInformation/byte-0013-bit-0/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-PatternDictionary/byte-0179-bit-0/: stream.jb2
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-PatternDictionary/byte-0179-bit-1/: stream.jb2
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-SymbolDictionary/byte-0048-bit-1/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_1-001-SymbolDictionary/byte-0048-bit-2/: stream.jb2
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_2-001-Unknown/byte-0017-bit-3/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_7-001-EndOfFile/byte-0856-bit-0/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_7-001-EndOfFile/byte-0856-bit-1/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_7-001-EndOfPage/byte-0396-bit-0/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/annex-h-bitflip/bucket-error-T88-7_2_7-001-EndOfPage/byte-0396-bit-1/: meta.toml  stream.jb2
crates/jbig2-workbench/tests/validator-corpus/mutated/: INDEX.md
crates/jbig2-workbench/tests/validator-corpus/synthetic/7.2.3-reserved-ref-count/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/synthetic/7.4.1-zero-region/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/synthetic/7.4.12-empty-profiles/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/synthetic/7.4.2-sdrefagg-forward-reference/: stream.jb2
crates/jbig2-workbench/tests/validator-corpus/synthetic/7.4.2-symbol-reserved-flags/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/synthetic/7.4.3-sbnuminsts-zero/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/synthetic/7.4.4-pattern-zero-size/: meta.toml  stream.jb2
crates/jbig2-workbench/tests/validator-corpus/synthetic/7.4.6-tpgdon-template3/: meta.toml
crates/jbig2-workbench/tests/validator-corpus/synthetic/7.4.7-refinement-reserved-flags/: meta.toml
crates/jbig2-workbench/tools/conformance/: known-issues.ron  main.rs
crates/jbig2-workbench/tools/corpus/: corpus_encode.rs
crates/jbig2-workbench/tools/corpus-mint/: annex_h_bitflip.rs  main.rs  mutate.rs
crates/jbig2-workbench/tools/corpus-validator/: main.rs
crates/jbig2-workbench/tools/jbig2-decode/: main.rs
crates/jbig2/src/: bitmap.rs  decoder.rs  encoder.rs  error.rs  image_plugin.rs  lib.rs  rgb_bitmap.rs
crates/jbig2/src/coding/: huffman.rs  mmr.rs  mmr_lut.rs  mq_context.rs
crates/jbig2/src/segments/: halftone_region.rs  page_information.rs  pattern_dictionary.rs  refinement_region.rs  symbol_dictionary.rs
crates/jbig2/src/symbol/: classify.rs  mod.rs
crates/jbig2/src/validator/: citation.rs  mod.rs  parse.rs  report.rs  runner.rs  segment_tree.rs
crates/jbig2/src/validator/catalog/: annex_a.rs  clause_7_3.rs  clause_7_4_13.rs  clause_7_4_5.rs  clause_7_4_6.rs  clause_7_4_8_through_11.rs  file_header.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs
(+1150 files in other folders)
