[workspace]
resolver = "2"
members = ["crates/jbig2", "crates/jbig2-workbench", "crates/image-bilevel"]
exclude = [
    "vendor/image",
    "vendor/image-extras",
    "vendor/jbig2enc",
    "vendor/jbig2-imageio",
    "vendor/T-REC-T.88-201808",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/jmole/jbig2-rust"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
