[package]
name = "jbig2-workbench"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license = "MIT"
publish = false

[features]
default = ["sandbox-runtime"]
cli = ["dep:clap", "dep:anyhow"]
validator-cli = ["dep:anyhow", "dep:clap", "dep:serde", "dep:serde_json"]
validator-corpus = ["dep:anyhow", "dep:clap", "dep:serde", "dep:serde_json", "dep:sha2", "dep:toml", "dep:ron", "sandbox-runtime"]
c-decoders-asan = []
conformance-tools = ["dep:ron", "dep:serde", "sandbox-runtime"]
sandbox-runtime = ["dep:libc"]

[dependencies]
jbig2 = { path = "../jbig2", features = ["validator", "__workbench"] }
image = { version = "0.25", default-features = false, features = ["png", "tiff", "bmp"] }
thiserror = "1"
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true }
ron = { version = "0.12.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
libc = { version = "0.2", optional = true }
toml = { version = "0.8", optional = true }

[dev-dependencies]
proptest = "1"
rand = "0.8"
rand_xoshiro = "0.6"
shlex = "1"
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "jbig2"
path = "src/bin/jbig2.rs"
required-features = ["cli"]

[[bin]]
name = "corpus-encode"
path = "tools/corpus/corpus_encode.rs"

[[bin]]
name = "conformance-matrix"
path = "tools/conformance/main.rs"
required-features = ["conformance-tools"]

[[bin]]
name = "annex-h-oracle"
path = "tools/conformance/annex_h_oracle.rs"

[[bin]]
name = "jbig2-validate"
path = "tools/validator/main.rs"
required-features = ["validator-cli"]

[[bin]]
name = "corpus-mint"
path = "tools/corpus-mint/main.rs"
required-features = ["validator-corpus"]

[[bin]]
name = "corpus-validator"
path = "tools/corpus-validator/main.rs"
required-features = ["validator-corpus"]

[[bin]]
name = "jbig2-decode"
path = "tools/jbig2-decode/main.rs"
