[package]
name = "jbig2"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
description = "Pure-Rust JBIG2 (ITU-T T.88 / ISO/IEC 14492) encoder and decoder."
categories = ["encoding", "multimedia::images", "compression"]
keywords = ["jbig2", "t88", "bilevel", "compression", "image"]
readme = "README.md"
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]

[features]
default = ["mmr"]
__workbench = []
mmr = []
rayon = ["dep:rayon"]
validator = []

[dependencies]
thiserror = "1"
image = { version = "0.25", default-features = false }
rayon = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
rand = "0.8"
rand_xoshiro = "0.6"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
